improve: filter only own updates for read-after-write-consistency (#3414)
Reworks how the framework filters watch events caused by the controller's own writes. The previous "expect this single RV" approach couldn't handle concurrent writes, foreign updates between two of our writes, mid-window deletes, or relist gaps. It is replaced with a per-resource event-filter window driven by an explicit state machine.

Signed-off-by: Attila Mészáros <a_meszaros@apple.com>